--- a/src/app/productos/pages/basic-pages/basic-pages.component.html
+++ b/src/app/productos/pages/basic-pages/basic-pages.component.html
@@ -1,9 +1,67 @@
-<div class="card flex justify-content-center">
-    <p-panel [showHeader]="false">
-        <h1>Pipes Basicos</h1>
-        <p>
-        Pipes incluidos en Angular -  Usualmente en el common module
-        </p>
+<div class="card justify-content-center">
+    <p-panel header="Pipes Basicos" class="p-2">
+        <p>Pipes incluidos en Angular - Usualmente en el common module</p>
     </p-panel>
 </div>
 
+<div class="grid">
+    <div class="col-12 md:col-6 lg:col-4">
+        <p-card header="uppercases">
+            {{ nameLower | uppercase }}
+        </p-card>
+    </div>
+
+    <div class="col-12 md:col-6 lg:col-4">
+        <p-card header="lowercases">
+            {{ nameLower | lowercase }}
+        </p-card>
+    </div>
+
+    <div class="col-12 md:col-6 lg:col-4">
+        <p-card header="titlecases">
+            {{ fullname | titlecase }}
+        </p-card>
+    </div>
+
+    <div class="col-12 md:col-6 lg:col-6">
+        <p-card header="Notacion custom date ">
+            <ol>
+                <li>fecha</li>
+                <li>fecha | date</li>
+                <li>fecha | date:short'</li>
+                <li>fecha | date:'long'</li>
+                <li>fecha | date:'MMMM'</li>
+                <li>fecha | date:'MMMM dd,yyyy</li>
+            </ol>
+
+            <hr />
+            <ol>
+                <li>fecha | date:'long':'GTM-6'</li>
+                <li>fecha | date:'long':'GTM-4'</li>
+                <li>fecha | date:'long':' ':'es-MX'</li>
+                <li>fecha | date:'long':' ':'fr'</li>
+            </ol>
+        </p-card>
+    </div>
+
+    <div class="col-12 md:col-6 lg:col-6">
+        <p-card header="custom date">
+            <ol>
+                <li>{{ customDate }}</li>
+                <li>{{ customDate | date }}</li>
+                <li>{{ customDate | date : "short" }}</li>
+                <li>{{ customDate | date : "long" }}</li>
+                <li>{{ customDate | date : "MMMM" }}</li>
+                <li>{{ customDate | date : "MMMM dd,yyyy" }}</li>
+            </ol>
+
+            <hr />
+            <ol>
+                <li>{{ customDate | date : "long" : "GTM-6" }}</li>
+                <li>{{ customDate | date : "long" : "GTM-4" }}</li>
+                <li>{{ customDate | date : "long" : "" : "es-MX" }}</li>
+                <li>{{ customDate | date : "long" : "" : "fr-CA" }}</li>
+            </ol>
+        </p-card>
+    </div>
+</div>
