--- a/src/app/productos/pages/number-pages/number-pages.component.html
+++ b/src/app/productos/pages/number-pages/number-pages.component.html
@@ -1,1 +1,23 @@
-<p>number-pages works!</p>
+<div class="card justify-content-center">
+    <p-panel header="Pipes Basicos" class="p-2">
+        <p>Pipes incluidos en Angular - Usualmente en el common module</p>
+    </p-panel>
+</div>
+
+<div class="grid">
+    <div class="col-12 md:col-6 lg:col-4">
+        <p-card header="Ventas Netas" subheader="del presete mes">
+            {{totalSells |  number:'1.1-3'}}
+        </p-card>
+    </div>
+    <div class="col-12 md:col-6 lg:col-4">
+        <p-card header="Ventas brutas" subheader="del presete mes">
+            {{totalSells  | currency:'MXN':'symbol-narrow':'1.6-6'}}
+        </p-card>
+    </div>
+    <div class="col-12 md:col-6 lg:col-4">
+        <p-card header="Ganancias Porcentuales" subheader="del presete mes">
+            {{percerted  | percent:'1.2-2'}}
+        </p-card>
+    </div>
+</div>
