--- a/src/app/productos/pages/uncommon-pages/uncommon-pages.component.html
+++ b/src/app/productos/pages/uncommon-pages/uncommon-pages.component.html
@@ -1,1 +1,101 @@
-<p>uncommon-pages works!</p>
+<div class="card justify-content-center">
+  <p-panel header="Pipes no tan comunes" class="p-2">
+    <p>Pipes incluidos en Angular - Usualmente en el common module</p>
+  </p-panel>
+</div>
+
+<div class="grid">
+
+  <div class="col-12 md:col-6 lg:col-4">
+    <div class="card flex justify-content-center">
+        <p-fieldset legend="i18nSelect Pipe" [toggleable]="true">
+          <p>
+           Saludos {{name}}, es un placer {{gender | i18nSelect:intationMap}} a nuestro evento
+          </p>
+
+          <p-button (click)="changeClient()" label="cambiar genero"></p-button>
+        </p-fieldset>
+      </div>
+  </div>
+
+  <div class="col-12 md:col-6 lg:col-4">
+    <div class="card flex justify-content-center">
+        <p-fieldset legend="i18nSelect Plural" [toggleable]="true">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+            veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+            commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+            velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+            occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+            mollit anim id est laborum.
+          </p>
+        </p-fieldset>
+      </div>
+  </div>
+
+  <div class="col-12 md:col-6 lg:col-4">
+    <div class="card flex justify-content-center">
+        <p-fieldset legend="Slices pipe" [toggleable]="true">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+            veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+            commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+            velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+            occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+            mollit anim id est laborum.
+          </p>
+        </p-fieldset>
+      </div>
+  </div>
+
+  <div class="col-12 md:col-6 lg:col-4">
+    <div class="card flex justify-content-center">
+        <p-fieldset legend="json pipe" [toggleable]="true">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+            veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+            commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+            velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+            occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+            mollit anim id est laborum.
+          </p>
+        </p-fieldset>
+      </div>
+  </div>
+
+  <div class="col-12 md:col-6 lg:col-4">
+    <div class="card flex justify-content-center">
+        <p-fieldset legend="KeyValue pipe" [toggleable]="true">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+            veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+            commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+            velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+            occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+            mollit anim id est laborum.
+          </p>
+        </p-fieldset>
+      </div>
+  </div>
+
+  <div class="col-12 md:col-6 lg:col-4">
+    <div class="card flex justify-content-center">
+        <p-fieldset legend="Async pipe" [toggleable]="true">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+            veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+            commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+            velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+            occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+            mollit anim id est laborum.
+          </p>
+        </p-fieldset>
+      </div>
+  </div>
+
+</div>
