--- a/src/app/productos/pages/uncommon-pages/uncommon-pages.component.html
+++ b/src/app/productos/pages/uncommon-pages/uncommon-pages.component.html
@@ -7,7 +7,8 @@
 <div class="grid">
 
   <div class="col-12 md:col-6 lg:col-4">
-    <div class="card flex justify-content-center">
+    <div class="card flex justify-content-center"> 
+        <!--  mostrar diferentes textos en función de una variable  -->
         <p-fieldset legend="i18nSelect Pipe" [toggleable]="true">
           <p>
            Saludos {{name}}, es un placer {{gender | i18nSelect:intationMap}} a nuestro evento
@@ -17,19 +18,14 @@
         </p-fieldset>
       </div>
   </div>
-
   <div class="col-12 md:col-6 lg:col-4">
     <div class="card flex justify-content-center">
+        <!-- i18nPlural permitiéndote mostrar diferentes traducciones o formatos de texto dependiendo del valor numérico de una variable en tu aplicación. -->
         <p-fieldset legend="i18nSelect Plural" [toggleable]="true">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-            veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-            commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-            velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-            occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-            mollit anim id est laborum.
+            Actualmente  {{clientes.length | i18nPlural:clientesMap}} 
           </p>
+          <p-button (click)="deleteClient()" label="borrar cliente"></p-button>
         </p-fieldset>
       </div>
   </div>
