--- a/src/app/productos/pages/uncommon-pages/uncommon-pages.component.html
+++ b/src/app/productos/pages/uncommon-pages/uncommon-pages.component.html
@@ -33,15 +33,17 @@
   <div class="col-12 md:col-6 lg:col-4">
     <div class="card flex justify-content-center">
         <p-fieldset legend="Slices pipe" [toggleable]="true">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-            veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-            commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-            velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-            occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-            mollit anim id est laborum.
-          </p>
+       <b>Original</b>
+       <pre>{{clientes}}</pre>
+
+       <b>slices:0:2</b>
+       <pre>{{clientes | slice:0:2}}</pre>
+       
+       <b>slices:2:6</b>
+       <pre>{{clientes | slice:2:6}}</pre>
+
+      
+
         </p-fieldset>
       </div>
   </div>
